# sotoestevezdev

./: .gitignore  CNAME  Cargo.toml  Justfile  Makefile  README.md  asset-manifest.json  index.html  main-4610a819364f128.css  package-lock.json  package.json  sotoestevezdev-ceddd2283b5e7fe0.js  sotoestevezdev-ceddd2283b5e7fe0_bg.wasm  themes-8ae62af9691ad7ad.css
.github/workflows/: deploy.yml  ghpages.yml
app/css/: console.css  index.css
app/js/: console.js
locales/en/: intro.json  portfolio.json  techstack.json
locales/es/: portfolio.json  techstack.json
locales/gl/: intro.json  portfolio.json  techstack.json
processor/: Cargo.toml
processor/lexer/: Cargo.toml
public/: index.html  manifest.json
sections/: about.md  description.md
seimd/: Cargo.toml
seimd/examples/: example.html  example.md  footer.md  input.html  input.js  output.html  output.js  wrapped.md
seimd/html_template/: Cargo.toml
seimd/seimd/: Cargo.toml  README.md
seimd/template_injector/: Cargo.toml  README.md
src/: .env.development  App.tsx  ContextProvider.tsx  Scroll.tsx  app.rs  github.rs  i18n.ts  icons.rs  index.css  index.rs  index.tsx  main.rs  shell.rs  store.tsx
src/app/: history.rs  prompt.rs  tty.rs
src/components/: Divider.tsx  Fallback.tsx  LanguageSelector.tsx  Scroll.tsx  SectionContainer.tsx  Slide.tsx  ThemeSwitch.tsx
src/reducers/: Lang.tsx  Theme.tsx  index.ts
src/sections/: Bottom.tsx  Intro.tsx  Introduction.tsx  (+5 more)
static/: about.html  contact.html  greeting.html  help.html  projects.html  prompt.html  themes.html
styles/: main.css  themes.css
(+132 files in other folders)
