[package]
name = "sotoestevezdev"
version = "0.1.0"
edition = "2024"
authors = [ "SotoEstevez <ricardo@sotoestevez.dev" ]
homepage = "https://github.com/kriogenia/sotoestevez"
repository = "https://github.com/kriogenia/sotoestevez"
license = "Apache-2.0 OR MIT"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
