[package]
name = "sotoestevezdev"
version = "0.1.0"
edition = "2024"
authors = [ "SotoEstevez <ricardo@sotoestevez.dev" ]
homepage = "https://github.com/kriogenia/sotoestevez"
repository = "https://github.com/kriogenia/sotoestevez"
license = "Apache-2.0 OR MIT"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["std", "derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
